# lasm

./: .gitignore  Makefile  README.md  asm-specs  data.cpp  data.h  data_immediate.cpp  hi.asm  hi.asm.save  lasm.pro  lex.yy.c  make.bat  p86asm  p86asm.l  p86asm.tab.c  p86asm.y  symtable.cpp  symtable.h
lasm-gui/: CMakeLists.txt  Makefile  lasm  lasm-gui  lasm-gui.pro  lasm-gui.qrc  lasm-gui.vcxproj  lasm-gui.vcxproj.filters  log.txt  main.cpp  moc_qwmain.cpp  qwmain.cpp  qwmain.h  qwmain.ui  ui_qwmain.h
msvc10/: lasm-gui.rc  lasm-gui.vcxproj  lasm-gui.vcxproj.filters  lasm.sln  lasm.vcxproj  lasm.vcxproj.filters  resource.h
res/: Lasm.icns  lasm-gui.rc
src/: BinarySegment.cpp  BinarySegment.hpp  IWriter.hpp  ListingWriter.cpp  ListingWriter.hpp  Logger.cpp  Logger.hpp  Makefile  Nodes.cpp  Nodes.h  README.md  TextSegment.cpp  TextSegment.hpp  VirgoWriter.cpp  VirgoWriter.h  common.cpp  common.h  data.cpp  data.h  data_immediate.cpp  hi.asm  lasm  lasm-profile.cfg  lasm.cpp  lasm.hpp  lasm.vcxproj  lasm.vcxproj.filters  lex.yy.c  log.txt  p86Assembler.cpp  p86Assembler.h  p86asm  p86asm.l  p86asm.l.inc  p86asm.output  p86asm.tab.c  p86asm.tab.h  p86asm.y  p86asm.y.0  preprocessor.cpp  (+7 more)
test/: Lab2b-P1.asm  simple.asm  test_registers.cc
